<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".D_view"
    android:gravity="center"
    android:background="@drawable/b2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageView
            android:layout_width="124dp"
            android:layout_height="124dp"
            android:layout_marginRight="100dp"

            android:src="@drawable/doca"
            android:padding="10dp"/>

        <ImageView
            android:layout_width="150dp"
            android:layout_height="124dp"
            android:layout_marginLeft="5dp"
            android:onClick="vieHome"
            android:padding="3dp"
            app:srcCompat="@drawable/asset_1_300x" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@drawable/font1"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="252dp"
            android:layout_height="61dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewProfileTeacher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/D_profile"
                android:textAlignment="center"
                android:textColor="#5D618A"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/blue"
                android:layout_gravity="center"
                android:background="@drawable/button_dr"
                android:tint="#FFFFFF"
                app:srcCompat="@drawable/access_alarms" />
        </LinearLayout>

        <EditText
            android:id="@+id/docCreateName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text"
            android:gravity="center"
            android:hint="@string/name_d"
            android:padding="8dp"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textColorHint="#401515"
            android:textSize="18sp" />

        <EditText

            android:id="@+id/docCreatePhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text"
            android:gravity="center"
            android:hint="@string/Contact_d"
            android:inputType="number"
            android:padding="8dp"
            android:textAlignment="center"
            android:textColorHint="#050000"
            android:textSize="18sp" />

        <EditText

            android:id="@+id/docCreateEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text"
            android:gravity="center"
            android:hint="@string/d_email"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:textAlignment="center"
            android:textColorHint="#100101"
            android:textSize="18sp" />

        <EditText

            android:id="@+id/docCreateBirth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text"
            android:gravity="center"
            android:hint="@string/birth_d"
            android:inputType="date"
            android:padding="8dp"
            android:textAlignment="center"
            android:textColorHint="#000000"
            android:textSize="18sp" />

        <EditText

            android:id="@+id/docCreateAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text"
            android:gravity="center"
            android:hint="@string/add_d"
            android:inputType="text"
            android:padding="8dp"
            android:textAlignment="center"
            android:textColorHint="#090101"
            android:textSize="18sp" />

        <EditText

            android:id="@+id/docCreateGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text"
            android:gravity="center"
            android:hint="@string/Gender_d"
            android:inputType="text"
            android:padding="8dp"
            android:textAlignment="center"
            android:textColorHint="#000000"
            android:textSize="18sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:textAlignment="center" >

            <Button
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:background="@drawable/button_dr"
                android:text="@string/d_delete"
                app:backgroundTint="@color/blue" />

            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_dr"
                android:text="@string/d_edit"
                app:backgroundTint="@color/blue" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>