<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/b2"
    tools:context=".delete_note">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="-16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteY="211dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/back"
                android:layout_width="396dp"
                android:layout_height="503dp"
                android:layout_marginTop="232dp"
                android:elevation="8dp"
                android:foreground="@drawable/font1"
                android:paddingTop="20dp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.666"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:visibility="visible">

            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="32dp"
                android:layout_height="32dp"
                app:srcCompat="@drawable/ic_4"
                tools:ignore="VectorDrawableCompat"
                tools:layout_editor_absoluteX="27dp"
                tools:layout_editor_absoluteY="82dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="119dp"
            android:layout_height="92dp"
            android:layout_marginStart="259dp"
            android:layout_marginLeft="259dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="679dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/asset_1_300x" />

        <EditText
            android:id="@+id/topText"
            android:layout_width="520dp"
            android:layout_height="41dp"
            android:layout_marginTop="118dp"
            android:layout_marginRight="125dp"
            android:layout_marginBottom="576dp"
            android:background="#B12D95E6"
            android:paddingLeft="155dp"
            android:paddingTop="10dp"
            android:paddingBottom="8dp"
            android:text="@string/c_clinic1"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="272dp"
        android:layout_height="39dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="176dp"
        android:layout_marginEnd="61dp"
        android:layout_marginRight="61dp"
        android:layout_marginBottom="520dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <Button
            android:id="@+id/studentBtn"
            android:layout_width="78dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/leftconer"
            android:text="@string/Patients"
            android:textStyle="bold"
            app:backgroundTint="#619130BA" />

        <Button
            android:id="@+id/noticeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rightcorner"
            android:text="Notices"
            android:textColor="#000000"
            android:textStyle="bold"
            app:backgroundTint="#FFFFFF" />

    </LinearLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="364dp"
        android:layout_height="112dp"
        android:foreground="@drawable/box"
        tools:layout_editor_absoluteX="15dp"
        tools:layout_editor_absoluteY="402dp">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/n_2"
        tools:layout_editor_absoluteX="37dp"
        tools:layout_editor_absoluteY="410dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/n_input"
        tools:layout_editor_absoluteX="36dp"
        tools:layout_editor_absoluteY="445dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="360dp"
        android:layout_height="114dp"
        android:layout_marginStart="17dp"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="268dp"
        android:layout_marginBottom="353dp"
        android:foreground="@drawable/box"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/n_input"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="326dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/n1"
        tools:layout_editor_absoluteX="36dp"
        tools:layout_editor_absoluteY="287dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="364dp"
        android:layout_height="112dp"
        android:foreground="@drawable/box"
        tools:layout_editor_absoluteX="13dp"
        tools:layout_editor_absoluteY="536dp">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/n_3"
        tools:layout_editor_absoluteX="36dp"
        tools:layout_editor_absoluteY="548dp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/n_input"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="587dp" />

    <ImageView
        android:id="@+id/docEdtBtn"
        android:layout_width="27dp"
        android:layout_height="32dp"
        android:layout_marginStart="289dp"
        android:layout_marginLeft="289dp"
        android:layout_marginTop="123dp"
        android:layout_marginEnd="77dp"
        android:layout_marginRight="77dp"
        android:layout_marginBottom="580dp"
        android:contentDescription="editBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/editbtn"
        tools:ignore="VectorDrawableCompat" />

    <ImageView
        android:id="@+id/docDelBtn4"
        android:layout_width="29dp"
        android:layout_height="27dp"
        android:contentDescription="deleteBtn"
        app:srcCompat="@drawable/deletebtn"
        tools:ignore="VectorDrawableCompat"
        tools:layout_editor_absoluteX="331dp"
        tools:layout_editor_absoluteY="351dp" />

    <ImageView
        android:id="@+id/docEdtBtn5"
        android:layout_width="26dp"
        android:layout_height="27dp"
        android:contentDescription="editBtn"
        app:srcCompat="@drawable/editbtn"
        tools:ignore="VectorDrawableCompat"
        tools:layout_editor_absoluteX="279dp"
        tools:layout_editor_absoluteY="616dp" />

    <ImageView
        android:id="@+id/docDelBtn5"
        android:layout_width="29dp"
        android:layout_height="27dp"
        android:contentDescription="deleteBtn"
        app:srcCompat="@drawable/deletebtn"
        tools:ignore="VectorDrawableCompat"
        tools:layout_editor_absoluteX="327dp"
        tools:layout_editor_absoluteY="616dp" />

    <ImageView
        android:id="@+id/docEdtBtn4"
        android:layout_width="26dp"
        android:layout_height="27dp"
        android:layout_marginTop="351dp"
        android:contentDescription="editBtn"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/editbtn"
        tools:ignore="VectorDrawableCompat"
        tools:layout_editor_absoluteX="279dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="200dp"
        android:layout_height="49dp"
        android:background="@drawable/button_dr"
        android:text="Create Notice"
        app:backgroundTint="@color/blue"
        app:layout_constraintEnd_toStartOf="@+id/constraintLayout2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout2"
        tools:layout_editor_absoluteY="659dp" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="110dp"
        android:layout_height="80dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="315dp"
        android:layout_marginRight="315dp"
        android:layout_marginBottom="665dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/doca" />


    <ImageView
        android:id="@+id/docDelBtn2"
        android:layout_width="29dp"
        android:layout_height="27dp"
        android:contentDescription="deleteBtn"
        app:srcCompat="@drawable/deletebtn"
        tools:ignore="VectorDrawableCompat"
        tools:layout_editor_absoluteX="327dp"
        tools:layout_editor_absoluteY="488dp" />

    <ImageView
        android:id="@+id/docEdtBtn2"
        android:layout_width="26dp"
        android:layout_height="27dp"
        android:contentDescription="editBtn"
        app:srcCompat="@drawable/editbtn"
        tools:ignore="VectorDrawableCompat"
        tools:layout_editor_absoluteX="280dp"
        tools:layout_editor_absoluteY="488dp" />

    <ImageView
        android:id="@+id/docDelBtn"
        android:layout_width="29dp"
        android:layout_height="27dp"
        android:layout_marginStart="336dp"
        android:layout_marginLeft="336dp"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginBottom="584dp"
        android:contentDescription="deleteBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/deletebtn"
        tools:ignore="VectorDrawableCompat" />

</androidx.constraintlayout.widget.ConstraintLayout>