<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Create_Notice">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frame0"
        android:layout_width="407dp"
        android:layout_height="802dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="421dp"
            android:layout_height="890dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/b2" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="93dp"
            android:layout_height="101dp"
            android:layout_marginStart="164dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.122"
            app:layout_constraintStart_toEndOf="@+id/btnDelete"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.078"
            app:srcCompat="@drawable/asset_1_300x"
            tools:ignore="RtlCompat,VectorDrawableCompat" />

        <ImageButton
            android:id="@+id/imageButton7"
            android:layout_width="38dp"
            android:layout_height="30dp"
            android:layout_marginTop="156dp"
            android:background="#FFFFFF"
            android:layout_marginStart="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.108"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_4"
            tools:ignore="RtlCompat,VectorDrawableCompat" />

        <ImageView
            android:id="@+id/btnDelete"
            android:layout_width="76dp"
            android:layout_height="85dp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toTopOf="@+id/imageButton7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.097"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.65"
            app:srcCompat="@drawable/doca" />

        <TextView
            android:id="@+id/txtView4"
            android:layout_width="396dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:background="#619130BA"
            android:freezesText="false"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:text="@string/btnCreate"
            android:textAlignment="viewStart"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.259"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton7"
            app:layout_constraintVertical_bias="0.03"
            tools:ignore="RtlCompat" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="406dp"
            android:layout_height="472dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.307"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtView4"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/font1" />

        <LinearLayout
            android:layout_width="365dp"
            android:layout_height="293dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtView4"
            app:layout_constraintVertical_bias="0.469">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp"
                android:text="@string/txtName1"
                android:textColor="#636363"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/pnote_textbox"
                android:paddingTop="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="#404040" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="15dp"
                android:text="@string/txtArea"
                android:textColor="#636363"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/etNote"
                android:layout_width="match_parent"
                android:layout_height="121dp"
                android:background="@drawable/pnote_textbox"
                android:paddingTop="8dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine" />
        </LinearLayout>

        <Button
            android:id="@+id/btnAddData"
            android:layout_width="121dp"
            android:layout_height="51dp"
            android:fontFamily="sans-serif"
            android:text="Create"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColorHighlight="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="normal"
            app:backgroundTint="#C06EE3"
            app:cornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView6"
            app:layout_constraintEnd_toEndOf="@+id/imageView6"
            app:layout_constraintHorizontal_bias="0.93"
            app:layout_constraintStart_toStartOf="@+id/imageView6"
            app:layout_constraintTop_toTopOf="@+id/imageView6"
            app:layout_constraintVertical_bias="0.813"
            tools:ignore="RtlCompat" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>